--- a/Rcode/length_age_comps/rec_lengthcomps_for_datafile.Rmd
+++ b/Rcode/length_age_comps/rec_lengthcomps_for_datafile.Rmd
@@ -6,8 +6,6 @@ date: "2025-04-04"
 
 Use this document as a source for Rec length comp code for pulling data into each of the model runs. I will comment out the code so that it is easy to see what should go into the models.
 
-*a lot of this data has been all uploaded to recfin since the last assessment, but there are sections of older data that dont line up. Is this data entry errors or is this updating old mistakes and putting data together? Should we just use the old + new, or completely replace? however, we cant really compare for some of the old years because we*
-
 ```{r setup, include=FALSE}
 rm(list = ls())
 
@@ -30,8 +28,7 @@ inputs <- SS_read(dir = model_2017_path, ss_new = TRUE)
 1. CA_REC, RecFin and Don's data, 1979-2024
   Remember, we filtered out 2020 data because there was only 1 length available.
   There was a perfect match for data, so no updates for old data. 
-  Just add the new stuff on top.
-  *still need to fix Nsamps*
+  Just add the new stuff on top, with fixed Nsamps
 ```{r}
 # Use this first section to grab the old data with out any changes!
 ca_rec_len <- inputs$dat$lencomp  |>
@@ -42,17 +39,19 @@ new_ca_rec_len <- read_csv(file.path("../../Data/processed/rec_comps/ca_rec_leng
 names(new_ca_rec_len) <- names(ca_rec_len) # Replace col names so they match everything else
 new_ca_rec_len <- new_ca_rec_len |>
   filter(year >= 2017) # only grab newest years
-ca_rec_len <- rbind(ca_rec_len,new_ca_rec_len) #put them together
+  ### Calculate Nsamps using linear equation y = 4.6 + 0.732x
+x <- new_ca_rec_len$Nsamp
+y <-  4.6 + 0.732*x
+new_ca_rec_len$Nsamp <- y
+
+#put them together
+ca_rec_len <- rbind(ca_rec_len,new_ca_rec_len) 
 ```
 
 2. OR_REC, MRFFS and ORBS combined, 1979-2024
   There was a *close* match for data, so no updates for old data. 
   Might be worth investigating these data sources for the future assessment.
-  Did adding data from all these sources to RecFin mess some things up?
-  Just add the new stuff on top.
-  *still need to fix Nsamps*
-  dont worry about it!
-
+  Just add the new stuff on top, with fixed Nsamps
 ```{r}
 # Use this first section to grab the old data with out any changes!
 or_rec_len <- inputs$dat$lencomp  |>
@@ -63,16 +62,19 @@ new_or_rec_len <- read_csv(file.path("../../Data/processed/rec_comps/or_rec_leng
 names(new_or_rec_len) <- names(or_rec_len) # Replace col names so they match everything else
 new_or_rec_len <- new_or_rec_len |>
   filter(year >= 2017) # only grab newest years
-or_rec_len <- rbind(or_rec_len,new_or_rec_len) #put them together
+  ### Calculate Nsamps using linear equation y = 0.341 + 1.1x
+x <- new_or_rec_len$Nsamp
+y <-  0.341 + 1.1*x
+new_or_rec_len$Nsamp <- y
+
+#put them together
+or_rec_len <- rbind(or_rec_len,new_or_rec_len) 
 ```
 
 3. WA_REC, 1981, 1987, 1996-2024
   There was a *close* match for data, no updates for old data. 
   Might be worth investigating these data sources for the future assessment.
-  RecFin had a lot more old years that were missing in the last assessment.
-  Just add the new stuff on top....Double check with Vlada
-  *still need to fix Nsamps*
-  close enough, investigate in future
+  Just add the new stuff on top, with fixed Nsamps
 ```{r}
 # Use this first section to grab the old data with out any changes!
 wa_rec_len <- inputs$dat$lencomp  |>
@@ -82,17 +84,20 @@ wa_rec_len <- inputs$dat$lencomp  |>
 new_wa_rec_len <- read_csv(file.path("../../Data/processed/rec_comps/wa_rec_lengths.csv"))
 names(new_wa_rec_len) <- names(wa_rec_len) # Replace col names so they match everything else
 new_wa_rec_len <- new_wa_rec_len |>
-  filter(year >= 2016) # only grab newest years, no data for 2016
-wa_rec_len <- rbind(wa_rec_len,new_wa_rec_len) #put them together
+  filter(year >= 2017) # only grab newest years, no data for 2016
+  ### Calculate Nsamps using linear equation y = 2.02 + 0.17x
+x <- new_wa_rec_len$Nsamp
+y <-  2.02 + 0.17*x
+new_wa_rec_len$Nsamp <- y
+
+#put them together
+wa_rec_len <- rbind(wa_rec_len,new_wa_rec_len) 
 ```
 
 4. CA_OBS, 1987-2024
   There was a *close* match for data, no updates for old data. 
   Might be worth investigating these data sources for the future assessment.
-  RecFin was missing a few lengths in the last assessment (2006 and 2007).
-  Just add the new stuff on top....Double check with Vlada
-  *still need to fix Nsamps*
-  close enough
+  Just add the new stuff on top, with fixed Nsamps
 ```{r}
 # Use this first section to grab the old data with out any changes!
 ca_obs_len <- inputs$dat$lencomp  |>
@@ -103,21 +108,38 @@ new_ca_obs_len <- read_csv(file.path("../../Data/processed/rec_comps/ca_obs_leng
 names(new_ca_obs_len) <- names(ca_obs_len) # Replace col names so they match everything else
 new_ca_obs_len <- new_ca_obs_len |>
   filter(year >= 2017) # only grab newest years
-ca_obs_len <- rbind(ca_obs_len,new_ca_obs_len) #put them together
+  ### Calculate Nsamps using linear equation y = 1.48 + 0.73x
+x <- new_ca_obs_len$Nsamp
+y <-  1.48 + 0.73*x
+new_ca_obs_len$Nsamp <- y
+
+#put them together
+ca_obs_len <- rbind(ca_obs_len,new_ca_obs_len) 
 ```
 
-4. OR_OBS, 2003-2024
+5. OR_OBS, 2003-2024
   There was a perfect match for length data. 
-  However, the Nsamps in the 2017 assessment are whole numbers...but they dont add up to the "total samples"
-  This is good because it means we probably dont have to recalculate Nsamps using the linear model...but what did they do last year that got the numbers off?
-
+  However, the Nsamps in the 2017 assessment are whole numbers.
+  For some reason they were rounded. Vlada found the raw Nsamp numbers. So for the update, we will replace them.
+  Also fix the Nsamps using linear equation
 ```{r}
 # Use this first section to grab the old data with out any changes!
 or_obs_len <- inputs$dat$lencomp  |>
   filter(fleet == 9)
 
+# Fix Nsamps so they aren't rounded numbers using Vlada's data
+or_obs_len$Nsamp <- c(2.276,13.898,15.312,30.348,30.176,29.142,18.416,14.76,15.14,41.42,26.658,34.626,18.002,19.864)
+
 ## For the Update, use only the new data, so that it has both updated years and updated Nsamps 
 new_or_obs_len <- read_csv(file.path("../../Data/processed/rec_comps/or_obs_lengths.csv"))
 names(new_or_obs_len) <- names(or_obs_len) # Replace col names so they match everything else
+new_or_obs_len <- new_or_obs_len |>
+  filter(year >= 2017) # only grab newest years
+  ### Calculate Nsamps using linear equation y = 5.76 + 0.415x
+x <- new_or_obs_len$Nsamp
+y <-  5.76 + 0.415*x
+new_or_obs_len$Nsamp <- y
 
+#put them together
+or_obs_len <- rbind(or_obs_len,new_or_obs_len) 
 ```
