--- a/report/02_introduction.qmd
+++ b/report/02_introduction.qmd
@@ -1,25 +1,27 @@
-## Introduction {#sec-intro}
+# Introduction
 
-Testing adding in an introduction for `r params$species`. There is currently no read of parameters for child documents.
+<!-- Scientific name, distribution, the basis for the choice of stock structure, including regional differences in life history or other biological characteristics that should form the basis of management units.  -->
 
-<!-- The intent is to keep this section to 2-3 pages and provide a high-level summary of the assessment findings. The intention is to provide enough information in this section so the audience does not need to reference previous documents. Please include the species scientific name at the first mention of its common name. -->
+## Life History
 
+Refer to the most recent full assessment for additional information.
 
-### Management History
+## Ecosystem considerations
 
-<!---
-Briefly describe the management history of the stock and status. Please only touch on historical policies that would have impacted modeling decisions or would be critical knowledge about the species that might affect its population dynamics.
---->
+Refer to the most recent full assessment for additional information.
 
-### Fishery Descriptions
+## Fishery description
 
-<!---
-Short summary of fleet composition (i.e., boat types), gear types, species targeted, and fishing grounds (one paragraph).
---->
+Refer to the most recent full assessment for additional information.
 
-### Ecosystem Considerations
+## Management History
 
-<!---
-If this section is not relevant, please ignore. However, the default will state, “Ecosystem considerations and/or climate indicators were not included in this assessment.”
---->
+Refer to the most recent full assessment for additional information.
 
+## Management performance
+
+<!-- Management performance, including a table or tables comparing Overfishing Limit (OFL), Acceptable Biological Catch (ABC), Annual Catch Limit (ACL), landings, and catch (i.e., landings plus discard) for each area and year. Groundfish assessments that estimate dead discarded catch must include a disclaimer noting that total mortality estimates from the WCGOP and from the stock assessment may differ due to the use of different methods. Investigation into how these methods differ is beyond the scope of a benchmark assessment. The rationale for modeling discard mortality can also be provided. This should be included in all update assessments.  -->
+
+## Fisheries off Canada and Alaska
+
+Refer to the most recent full assessment for additional information.
