--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -1,31 +1,47 @@
-## Data {#sec-data}
+# Data
 
 <!--- Provide temporal and spatial resolutions or sample size where appropriate for each of the subsections, below.--->
 
-### Stock ID
+## Fishery-dependent data
 
-<!-- Provide a detailed description of the stock, if appropriate, as well as quantitative studies or data behind the decision-making process. -->
-
-### Life History
-
-<!-- Describe the stock's growth, maturity, fecundity, natural mortality, meristics, etc. -->
+<!-- Commercial fisheries landings by state, year, and gear (PacFIN is the standard source for recent domestic commercial landings), historical catch estimates, discards, recreational fisheries catches, foreign removals; sample size information for length- and age-composition data by state, year and gear, including both the number of trips and fish sampled. Description of methods to estimate abundance indices, sample size information by survey and year. Include complete tables and figures and date of data extraction. -->
 
 ### Landings
 
-<!-- Describe the retained catch and discards. -->
 
-### Indices and Standardization
+### Discards
 
-<!-- Describe both the fishery dependent and independent data. -->
 
-### Composition Data
+### Biological data
 
-<!-- Describe composition data related to age and length, including  aging error and reweighting. -->
 
-### Absolute Abundance
+### Abundance indices
 
-<!-- Describe absolute abundance, if applicable. -->
 
-### Environmental/Ecosystem Indicator Data
+## Fishery-independent data
 
-<!-- Describe the environmental/ecosystem indicator data. If none are considered, include a blanket statement. -->
+<!-- 
+Fishery-independent data: Description of surveys used in the assessment, description of methods to estimate abundance indices, sample size information for length- and age- composition data by survey and year, including both the number of tows (or drops or sites for hook and line data) and fish sampled. Include complete tables and figures and date of data extraction. 
+
+For pre-written descriptions of our main surveys, go here: https://github.com/pfmc-assessments/sa4ss/tree/main/inst/rmarkdown/templates/sa/skeleton
+And copy the text from the files 21s-tri.Rmd and 21s-wcgbts.Rmd
+-->
+
+## Biological Parameters
+
+
+### Natural Mortality
+
+
+### Weight-at-length
+
+
+### Maturity
+
+
+### Fecundity
+
+
+## Environmental and ecosystem data
+
+<!-- Environmental or ecosystem data or model products used in the stock assessment model and/or in the preparation of data or estimation of biological parameters. If environmental or ecosystem data are incorporated in the stock assessment model, provide a report of consultations with technical teams that evaluate ecosystem data or methodologies used in  -->
