--- a/report/08_tables.qmd
+++ b/report/08_tables.qmd
@@ -1,3 +1,20 @@
-### Tables 
+## Tables 
  
-Please refer to the `satf` package downloaded from remotes::install_github('nmfs-ost/satf') to add premade tables.
+```{r} 
+#| label: 'set-rda-dir-tbls'
+#| echo: false 
+#| warning: false 
+#| eval: true 
+#| include: false
+library(flextable)
+
+# You can save tables to read in as csv or rda files.
+# stockplotr generally uses rda files.
+# I (Kiva) prefer csv files because they are text files that are easier to track and preview with version control.
+
+# There are many ways to incorporate tables into quarto documents.
+# One is using the flextable package via R chunks.
+# For help: https://ardata-fr.github.io/flextable-book/
+
+``` 
+
