--- a/report/09_figures.qmd
+++ b/report/09_figures.qmd
@@ -1,3 +1,8 @@
-### Figures 
- 
-Please refer to the `satf` package downloaded from remotes::install_github('nmfs-ost/satf') to add premade figures.
+## Figures
+
+<!-- 
+Example: 
+
+![Figure caption \label{fig:tag_name}](file.png){alt="alt text"} 
+
+-->
