--- a/report/asar_references.bib
+++ b/report/asar_references.bib
@@ -742,12 +742,10 @@
 }
 
 @techreport{rogers_species_2003,
-  title = {Species allocation of \textit{{Sebastes}} and \textit{{Sebastolobus}} sp. caught by foreign countries off {Washington}, {Oregon}, and {California}, {U}.{S}.{A}. in 1965-1976},
-  number = {NMFS-NWFSC-57},
-  type = {NOAA Technical Memorandum},
+  title = {Species allocation of \textit{{Sebastes}} and \textit{{Sebastolobus}} species caught by foreign countries off {Washington}, {Oregon}, and {California}, {U}.{S}.{A}. in 1965-1976},
+  institution = {Unpublished document},
   author = {Rogers, J.B.},
-  year = {2003},
-  url = {https://repository.library.noaa.gov/view/noaa/3364}
+  year = {2003}
 }
 
 @article{seeb_genetic_1988,
